Spelling error in index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Hello World Edited by Jelmer, this is a test for an assignemnt</h1>
+<h1>Hello World Edited by Jelmer, this is a test for an assignment</h1>
 
