added a 3rd paragraph

--- a/Les 1.html
+++ b/Les 1.html
@@ -34,6 +34,9 @@
 <P>
      einde van de website, Aangepast door jelmer voor opdracht 8 web   
 </P>
+<P>
+     einde van de website, maar begin van een nieuw git carriere
+</P>
 
 </body>
 
